web: new profile page and profile editing logic
