# web/openapi.yaml
@@ -29,6 +29,33 @@ components:
             properties:
               msg:
                 example: "You must be logged in as an admin to do that!"
+    userInfo:
+      description: User information
+      content:
+        application/json:
+          schema:
+            required:
+              - id
+              - name
+              - about
+              - isAdmin
+              - createdAt
+              - updatedAt
+            properties:
+              id:
+                type: integer
+              name:
+                type: string
+              about:
+                type: string
+              isAdmin:
+                type: boolean
+              createdAt:
+                type: string
+                format: date-time
+              updatedAt:
+                type: string
+            format: date-time
   schemas:
     postContents:
       required:
@@ -204,37 +231,12 @@ paths:
       summary: Get info about yourself
       security: [bearerAuth: []]
       responses:
-        200:
-          description: User information
-          content:
-            application/json:
-              schema:
-                required:
-                  - id
-                  - name
-                  - about
-                  - isAdmin
-                  - createdAt
-                  - updatedAt
-                properties:
-                  id:
-                    type: integer
-                  name:
-                    type: string
-                  about:
-                    type: string
-                  isAdmin:
-                    type: boolean
-                  createdAt:
-                    type: string
-                    format: date-time
-                  updatedAt:
-                    type: string
-                    format: date-time
+        200: { $ref: "#/components/responses/userInfo" }
         401: { $ref: "#/components/responses/unauthorized" }
     put:
       tags: [Users]
       summary: Edit your name, password and about text
+      description: The username and about text must be sent (unless you want to delete the about text). The password is only updated if a non-empty password is sent.
       security: [bearerAuth: []]
       requestBody:
         content:
@@ -251,8 +253,36 @@ paths:
       responses:
         200:
           description: Success!
-        400:
-          description: No properties specified to change
+        401: { $ref: "#/components/responses/unauthorized" }
+  /users/{id}:
+    parameters: [{ $ref: "#/components/parameters/idInPath" }]
+    get:
+      tags: [Users]
+      summary: Get info about a specific user
+      security: [bearerAuth: []]
+      responses:
+        200: { $ref: "#/components/responses/userInfo" }
+        401: { $ref: "#/components/responses/unauthorized" }
+    put:
+      tags: [Users]
+      summary: Edit a specific user's name, password and about text as an admin
+      description: The username and about text must be sent (unless you want to delete the about text). The password is only updated if a non-empty password is sent.
+      security: [bearerAuth: []]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                name:
+                  type: string
+                password:
+                  type: string
+                  format: password
+                about:
+                  type: string
+      responses:
+        200:
+          description: Success!
         401: { $ref: "#/components/responses/unauthorized" }
   /posts:
     get:
